<resources>
    <string name="app_name">Sign</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="hint_username">phoneNumber</string>
    <string name="hint_password">password</string>
    <string name="hint_valid_code">validCode</string>
    <string name="hint_confirm_password">confirmPassword</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="main">主页</string>
    <string name="set_password">设置密码</string>
    <string name="password_empty">密码不能为空</string>
    <string name="confirm_password_empty">确认密码不能为空</string>
    <string name="password_not_same">两次输入密码不一致</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="network_error">网络连接错误</string>
    <string name="wx_not_install">您还没有安装微信</string>
    <string name="exit">再按一次退出程序</string>
    <string name="loading">正在加载......</string>
    <string name="activity_floatTop">FloatTop</string>
    <string name="context_menu">menu</string>
    <string name="share_wei_xin">微信</string>
    <string name="share_wei_bo">微博</string>
    <string name="share_message">短信</string>
</resources>
