<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchStyle">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_above="@+id/til_password"
        android:layout_margin="8dp"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/hint_username"
            style="@style/WrapStyle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_above="@+id/tv_login"
        android:layout_margin="8dp"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            android:textColor="@color/input_text_color"
            android:inputType="textPassword"
            style="@style/WrapStyle"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        style="@style/SmallBtnStyle"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:textColor="@color/small_btn_bg_normal_color"
        android:layout_centerVertical="true"/>

</RelativeLayout>