<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_above="@+id/til_password"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/hint_username"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/WrapStyle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="120dp"
        android:layout_above="@+id/tv_next"
        android:layout_marginBottom="12dp"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_valid_code"
            android:hint="@string/hint_valid_code"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            style="@style/WrapStyle"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_get_valid_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/get_valid_code"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:textSize="16sp"
        android:layout_above="@+id/tv_next"
        android:layout_toRightOf="@+id/til_password"
        android:layout_toEndOf="@+id/til_password"
        android:textColor="@color/small_btn_bg_normal_color" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        style="@style/SmallBtnStyle"
        android:text="@string/next"/>

</RelativeLayout>