<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/sign_bg" >

    <TextView
        android:id="@+id/tv_wei_xin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_wei_xin"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_wei_bo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_wei_bo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_message"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:padding="8dp" />

</LinearLayout>