<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_set_password"
        android:layout_margin="8dp"
        android:layout_above="@+id/til_confirm_password"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_set_password"
            android:hint="@string/hint_password"
            style="@style/WrapStyle"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_margin="8dp"
        android:layout_above="@+id/tv_next"
        style="@style/WrapStyle">

        <EditText
            android:id="@+id/et_confirm_password"
            android:hint="@string/hint_confirm_password"
            style="@style/WrapStyle"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        style="@style/SmallBtnStyle"
        android:text="@string/next"/>
</RelativeLayout>