<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_sign_logo" />


    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_btn_shape"
        android:textSize="18sp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:colorControlHighlight="@color/ripple_bg"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_qq"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/tv_wechat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_toLeftOf="@+id/tv_qq"
        android:layout_toStartOf="@+id/tv_qq"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_wechat" />

    <ImageView
        android:id="@+id/tv_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_qq" />

    <ImageView
        android:id="@+id/tv_weibo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@+id/tv_qq"
        android:layout_toRightOf="@+id/tv_qq"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_weibo" />
</RelativeLayout>